ebtools/src/common/hal/parser.output
Terminals unused in grammar

    WORD
    BYTE
    OPEN_ANGLE
    CLOSE_ANGLE
    PLUS
    MINUS
    SHIFT
    EQUAL
    COLON
    LABEL
    EOE


State 0 conflicts: 84 shift/reduce
State 88 conflicts: 1 shift/reduce
State 492 conflicts: 3 shift/reduce


Grammar

    0 $accept: toplevel $end

    1 toplevel: sequence

    2 sequence: ε
    3         | action
    4         | sequence action

    5 action: EOL
    6       | label
    7       | label EOL
    8       | instruction EOL
    9       | assignment
   10       | directive
   11       | ENDP EOL
   12       | error EOL

   13 label: SYMBOL ':'
   14      | SYMBOL ':' ':'
   15      | LOCAL_LABEL ':'
   16      | LOCAL_LABEL ':' ':'

   17 instruction: INS_FOP three_freg
   18            | INS_FP2 two_freg

   19 $@1: ε

   20 instruction: INS_IOP ireg ',' $@1 intreg

   21 $@2: ε

   22 instruction: INS_FTI freg ',' $@2 ireg

   23 $@3: ε

   24 instruction: INS_ITF ireg ',' $@3 freg
   25            | INS_SEXT intreg
   26            | INS_IP2 two_ireg

   27 $@4: ε

   28 instruction: INS_IP3 ireg ',' $@4 two_ireg

   29 $@5: ε

   30 instruction: INS_LSB ireg ',' $@5 '(' ireg ')'

   31 $@6: ε

   32 instruction: INS_SSB ireg ',' $@6 '(' ireg ')'

   33 $@7: ε

   34 instruction: INS_MEM ifreg ',' $@7 disp16 '(' ireg ')'
   35            | INS_UNOP disp16 '(' ireg ')'
   36            | INS_UNOP disp16

   37 $@8: ε

   38 instruction: INS_JSR ireg ',' $@8 '(' ireg ')' hint

   39 $@9: ε

   40 instruction: INS_JSR ireg ',' $@9 disp14 '(' ireg ')'

   41 $@10: ε

   42 instruction: INS_BRN ifreg ',' $@10 disp21
   43            | INS_CALLPAL disp26

   44 $@11: ε

   45 instruction: INS_RPCC ireg ',' $@11 '(' ireg ')'
   46            | INS_RPCC ireg
   47            | INS_M1A ireg
   48            | INS_M1B '(' ireg ')'
   49            | INS_MIS
   50            | INS_1REG ireg
   51            | INS_FPCR freg
   52            | INS_FPCR three_freg

   53 $@12: ε

   54 instruction: INS_IPR4 ireg ',' $@12 ipr

   55 $@13: ε

   56 instruction: INS_HWM4 ireg ',' $@13 disp12 '(' ireg ')'

   57 $@14: ε

   58 instruction: INS_IPR5 ireg ',' $@14 ipr

   59 $@15: ε

   60 instruction: INS_HWM5 ireg ',' $@15 disp10 '(' ireg ')' mode
   61            | INS_REI6 '(' ireg ')'

   62 $@16: ε

   63 instruction: INS_REI6 ireg ',' $@16 '(' ireg ')' hint

   64 $@17: ε

   65 instruction: INS_MTI6 ireg ',' $@17 ipr scbd6

   66 $@18: ε

   67 instruction: INS_MFI6 ireg ',' $@18 ipr scbd6

   68 $@19: ε

   69 instruction: INS_HWM6 ireg ',' $@19 disp12 '(' ireg ')'

   70 ifreg: IREG
   71      | FREG
   72      | absexpr

   73 $@20: ε

   74 $@21: ε

   75 three_freg: freg ',' $@20 freg ',' $@21 freg

   76 $@22: ε

   77 two_freg: freg ',' $@22 freg

   78 $@23: ε

   79 intreg: ireg ',' $@23 ireg

   80 $@24: ε

   81 intreg: '#' expr ',' $@24 ireg

   82 $@25: ε

   83 two_ireg: ireg ',' $@25 ireg

   84 disp10: ε
   85       | expr

   86 disp12: ε
   87       | expr

   88 disp14: expr

   89 disp16: ε
   90       | expr

   91 disp21: expr

   92 disp26: expr

   93 hint: ε
   94     | ',' disp14

   95 mode: ε
   96     | ',' expr

   97 ipr: absexpr

   98 scbd6: ε
   99      | ',' absexpr

  100 ireg: IREG
  101     | absexpr

  102 freg: FREG
  103     | absexpr

  104 assignment: SYMBOL '=' expr EOL
  105           | DOT '=' absexpr EOL

  106 expr: element
  107     | expr '+' expr
  108     | expr '-' expr
  109     | expr '*' expr
  110     | expr '/' expr
  111     | expr '@' expr
  112     | expr '&' expr
  113     | expr '!' expr
  114     | expr '\\' expr
  115     | expr LOG_AND expr
  116     | expr LOG_OR expr
  117     | NOT expr
  118     | LOG_NOT expr
  119     | '-' expr
  120     | '<' expr '>'

  121 element: NUMBER
  122        | SYMBOL
  123        | LOCAL_LABEL
  124        | DOT

  125 absexpr: expr

  126 directive: INCLUDE STRING EOL
  127          | INCLUDE_DIR STRING EOL
  128          | MINCLUDE STRING EOL

  129 $@26: ε

  130 directive: PRAGMA $@26 pragma_flags EOL
  131          | ARCH arch_flag EOL

  132 $@27: ε

  133 directive: ASCII $@27 string_seq EOL

  134 $@28: ε

  135 directive: ASCIZ $@28 string_seq EOL

  136 $@29: ε

  137 directive: IF if_condition EOL mainbody $@29 ifsubbody_seq ENDC EOL
  138          | IIF if_condition ',' BODYTEXT EOL
  139          | REPEAT opt_absexpr EOL BODYTEXT ENDR EOL

  140 $@30: ε

  141 $@31: ε

  142 directive: WHILE $@30 while_condition $@31 EOL BODYTEXT ENDW EOL
  143          | BREAK EOL
  144          | CONTINUE EOL
  145          | CMDIN absexpr EOL BODYTEXT ENDI EOL
  146          | DOCMD STRING EOL
  147          | ALIGN alignbound opt_alignfill EOL

  148 $@32: ε

  149 directive: ADDR $@32 mem_exprseq EOL

  150 $@33: ε

  151 directive: QUAD $@33 mem_exprseq EOL

  152 $@34: ε

  153 directive: LONG $@34 mem_exprseq EOL
  154          | WARN opt_absexpr COMMENT EOL
  155          | ERROR opt_absexpr COMMENT EOL
  156          | PRINT opt_absexpr COMMENT EOL
  157          | PSECT SYMBOL psect_args EOL
  158          | SAVE_PSECT EOL
  159          | SAVE_DSECT EOL
  160          | SAVE_PSECT LOCAL_BLOCK EOL
  161          | SAVE_DSECT LOCAL_BLOCK EOL
  162          | RESTORE_PSECT EOL
  163          | RESTORE_DSECT EOL
  164          | BLKL absexpr EOL
  165          | BLKQ absexpr EOL

  166 $@35: ε

  167 directive: MACRO SYMBOL opt_comma $@35 opt_macro_arglist EOL BODYTEXT ENDM EOL

  168 $@36: ε

  169 directive: MACRO_CALL $@36 opt_macro_call_arglist EOL
  170          | NEXT_ARG EOL

  171 $@37: ε

  172 directive: NOLIST $@37 list_flags EOL
  173          | NOLIST EOL

  174 $@38: ε

  175 directive: LIST $@38 list_flags EOL
  176          | LIST EOL
  177          | NODEBUG EOL
  178          | K_DEBUG EOL
  179          | IDENT EOL
  180          | TITLE EOL
  181          | DSECT SYMBOL psect_args EOL
  182          | HEADER EOL
  183          | ENDH EOL
  184          | LINK_ADDRESS absexpr EOL
  185          | LINK_OFFSET absexpr EOL
  186          | LINK_REGION absexpr EOL
  187          | LINK_SIZE absexpr EOL
  188          | LINK_AFTER SYMBOL EOL
  189          | LINK_FIRST EOL
  190          | LINK_LAST EOL

  191 $@39: ε

  192 directive: LINK_ATTR $@39 link_flags EOL

  193 arch_flag: A_EV4
  194          | A_EV5
  195          | A_EV6

  196 pragma_flags: pragma_flag
  197             | pragma_flags pragma_flag

  198 pragma_flag: MAC_NONE
  199            | MAC_ONCE
  200            | MAC_UNLIMITED
  201            | LEXER_DEBUG_ON
  202            | LEXER_DEBUG_OFF
  203            | PARSER_DEBUG_ON
  204            | PARSER_DEBUG_OFF

  205 link_flags: link_flag
  206           | link_flags link_flag

  207 link_flag: OVERLAP_OK
  208          | DIRECTLY_AFTER

  209 list_flags: list_flag
  210           | list_flags list_flag

  211 list_flag: MEB
  212          | MC
  213          | CND
  214          | MD
  215          | ME
  216          | CMDIN
  217          | ASSIGN

  218 string_seq: string_ele
  219           | string_seq string_ele

  220 string_ele: STRING
  221           | '<' absexpr '>'

  222 if_condition: EQ absexpr
  223             | NE absexpr
  224             | GT absexpr
  225             | LT absexpr
  226             | GE absexpr
  227             | LE absexpr
  228             | DF SYMBOL
  229             | NDF SYMBOL
  230             | B ',' opt_arg_value
  231             | NB ',' opt_arg_value
  232             | IDN ',' opt_arg_value ',' opt_arg_value
  233             | DIF ',' opt_arg_value ',' opt_arg_value

  234 while_condition: EQ expr
  235                | NE expr
  236                | GT expr
  237                | LT expr
  238                | GE expr
  239                | LE expr
  240                | DF SYMBOL
  241                | NDF SYMBOL
  242                | B ',' opt_arg_value
  243                | NB ',' opt_arg_value
  244                | IDN ',' opt_arg_value ',' opt_arg_value
  245                | DIF ',' opt_arg_value ',' opt_arg_value

  246 opt_comma: ε
  247          | ','

  248 opt_arg_value: ε
  249              | arg_value

  250 mainbody: BODYTEXT

  251 ifsubbody_seq: ε
  252              | ifsubbody
  253              | ifsubbody_seq ifsubbody

  254 ifsubbody: IFF BODYTEXT
  255          | IFT BODYTEXT
  256          | IFTF BODYTEXT

  257 alignbound: absexpr
  258           | K_BYTE
  259           | K_WORD
  260           | K_LONG
  261           | K_QUAD
  262           | K_PAGE

  263 opt_alignfill: ε
  264              | ',' absexpr

  265 mem_exprseq: expr
  266            | mem_exprseq ',' expr

  267 opt_absexpr: ε
  268            | absexpr

  269 psect_args: ε
  270           | ',' alignbound

  271 opt_macro_arglist: ε
  272                  | macro_arglist

  273 macro_arglist: macro_arg
  274              | macro_arglist ',' macro_arg

  275 macro_arg: SYMBOL arg_default
  276          | '~' SYMBOL arg_default
  277          | DOTDOTDOT SYMBOL arg_default
  278          | DOTDOTDOT arg_default
  279          | '?' SYMBOL

  280 arg_default: ε
  281            | '=' ARG_VALUE
  282            | '=' SYMBOL

  283 opt_macro_call_arglist: macro_call_arg
  284                       | opt_macro_call_arglist ',' macro_call_arg

  285 arg_value: SYMBOL
  286          | ARG_VALUE

  287 macro_call_arg: ε
  288               | '\\' SYMBOL
  289               | arg_value
  290               | SYMBOL '=' '\\' SYMBOL
  291               | SYMBOL '=' opt_arg_value


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 113
    '#' (35) 81
    '&' (38) 112
    '(' (40) 30 32 34 35 38 40 45 48 56 60 61 63 69
    ')' (41) 30 32 34 35 38 40 45 48 56 60 61 63 69
    '*' (42) 109
    '+' (43) 107
    ',' (44) 20 22 24 28 30 32 34 38 40 42 45 54 56 58 60 63 65 67 69 75 77 79 81 83 94 96 99 138 230 231 232 233 242 243 244 245 247 264 266 270 274 284
    '-' (45) 108 119
    '/' (47) 110
    ':' (58) 13 14 15 16
    '<' (60) 120 221
    '=' (61) 104 105 281 282 290 291
    '>' (62) 120 221
    '?' (63) 279
    '@' (64) 111
    '\\' (92) 114 288 290
    '~' (126) 276
    error (256) 12
    ENDP (258) 11
    INS_FOP (259) 17
    INS_FP2 (260) 18
    INS_IOP (261) 20
    INS_MEM (262) 34
    INS_JSR (263) 38 40
    INS_BRN (264) 42
    INS_M1A (265) 47
    INS_M1B (266) 48
    INS_MIS (267) 49
    INS_FPCR (268) 51 52
    INS_RPCC (269) 45 46
    INS_SEXT (270) 25
    INS_IP2 (271) 26
    INS_IP3 (272) 28
    INS_FTI (273) 22
    INS_LSB (274) 30
    INS_SSB (275) 32
    INS_ITF (276) 24
    INS_UNOP (277) 35 36
    INS_CALLPAL (278) 43
    INS_IPR4 (279) 54
    INS_HWM4 (280) 56
    INS_IPR5 (281) 58
    INS_HWM5 (282) 60
    INS_REI6 (283) 61 63
    INS_MTI6 (284) 65
    INS_MFI6 (285) 67
    INS_HWM6 (286) 69
    INS_1REG (287) 50
    IREG (288) 70 100
    FREG (289) 71 102
    ADDR (290) 149
    QUAD (291) 151
    LONG (292) 153
    BLKL (293) 164
    BLKQ (294) 165
    IDENT (295) 179
    TITLE (296) 180
    WORD (297)
    BYTE (298)
    BODYTEXT (299) 138 139 142 145 167 250 254 255 256
    K_BYTE (300) 258
    K_WORD (301) 259
    K_LONG (302) 260
    K_QUAD (303) 261
    K_PAGE (304) 262
    LOCAL_LABEL (305) 15 16 123
    LOCAL_BLOCK (306) 160 161
    NOLIST (307) 172 173
    LIST (308) 175 176
    MEB (309) 211
    MC (310) 212
    CND (311) 213
    MD (312) 214
    ME (313) 215
    ASSIGN (314) 217
    CMDIN (315) 145 216
    NODEBUG (316) 177
    K_DEBUG (317) 178
    NUMBER (318) 121
    IF (319) 137
    WHILE (320) 142
    BREAK (321) 143
    CONTINUE (322) 144
    INCLUDE (323) 126
    INCLUDE_DIR (324) 127
    MINCLUDE (325) 128
    OPEN_ANGLE (326)
    CLOSE_ANGLE (327)
    PLUS (328)
    MINUS (329)
    SHIFT (330)
    EQUAL (331)
    NOT (332) 117
    LOG_AND (333) 115
    LOG_OR (334) 116
    LOG_NOT (335) 118
    COLON (336)
    SYMBOL (337) 13 14 104 122 157 167 181 188 228 229 240 241 275 276 277 279 282 285 288 290 291
    LABEL (338)
    STRING (339) 126 127 128 146 220
    EOL (340) 5 7 8 11 12 104 105 126 127 128 130 131 133 135 137 138 139 142 143 144 145 146 147 149 151 153 154 155 156 157 158 159 160 161 162 163 164 165 167 169 170 172 173 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 192
    EOE (341)
    DOT (342) 105 124
    EQ (343) 222 234
    GT (344) 224 236
    LT (345) 225 237
    DF (346) 228 240
    NE (347) 223 235
    GE (348) 226 238
    LE (349) 227 239
    NDF (350) 229 241
    ENDC (351) 137
    ENDW (352) 142
    ALIGN (353) 147
    IFF (354) 254
    IFT (355) 255
    IFTF (356) 256
    REPEAT (357) 139
    ENDR (358) 139
    ENDI (359) 145
    DOCMD (360) 146
    COMMENT (361) 154 155 156
    MACRO (362) 167
    ENDM (363) 167
    PRAGMA (364) 130
    MACRO_CALL (365) 169
    DOTDOTDOT (366) 277 278
    NEXT_ARG (367) 170
    ARG_VALUE (368) 281 286
    ASCII (369) 133
    ASCIZ (370) 135
    SAVE_PSECT (371) 158 160
    SAVE_DSECT (372) 159 161
    RESTORE_PSECT (373) 162
    RESTORE_DSECT (374) 163
    PSECT (375) 157
    DSECT (376) 181
    LINK_ADDRESS (377) 184
    LINK_AFTER (378) 188
    LINK_FIRST (379) 189
    LINK_LAST (380) 190
    LINK_ATTR (381) 192
    LINK_OFFSET (382) 185
    LINK_REGION (383) 186
    LINK_SIZE (384) 187
    HEADER (385) 182
    ENDH (386) 183
    OVERLAP_OK (387) 207
    DIRECTLY_AFTER (388) 208
    MAC_NONE (389) 198
    MAC_ONCE (390) 199
    MAC_UNLIMITED (391) 200
    LEXER_DEBUG_ON (392) 201
    LEXER_DEBUG_OFF (393) 202
    PARSER_DEBUG_ON (394) 203
    PARSER_DEBUG_OFF (395) 204
    WARN (396) 154
    ERROR (397) 155
    PRINT (398) 156
    B (399) 230 242
    NB (400) 231 243
    IDN (401) 232 244
    DIF (402) 233 245
    IIF (403) 138
    ARCH (404) 131
    A_EV4 (405) 193
    A_EV5 (406) 194
    A_EV6 (407) 195
    UMINUS (408)


Nonterminals, with rules where they appear

    $accept (172)
        on left: 0
    toplevel (173)
        on left: 1
        on right: 0
    sequence (174)
        on left: 2 3 4
        on right: 1 4
    action (175)
        on left: 5 6 7 8 9 10 11 12
        on right: 3 4
    label (176)
        on left: 13 14 15 16
        on right: 6 7
    instruction (177)
        on left: 17 18 20 22 24 25 26 28 30 32 34 35 36 38 40 42 43 45 46 47 48 49 50 51 52 54 56 58 60 61 63 65 67 69
        on right: 8
    $@1 (178)
        on left: 19
        on right: 20
    $@2 (179)
        on left: 21
        on right: 22
    $@3 (180)
        on left: 23
        on right: 24
    $@4 (181)
        on left: 27
        on right: 28
    $@5 (182)
        on left: 29
        on right: 30
    $@6 (183)
        on left: 31
        on right: 32
    $@7 (184)
        on left: 33
        on right: 34
    $@8 (185)
        on left: 37
        on right: 38
    $@9 (186)
        on left: 39
        on right: 40
    $@10 (187)
        on left: 41
        on right: 42
    $@11 (188)
        on left: 44
        on right: 45
    $@12 (189)
        on left: 53
        on right: 54
    $@13 (190)
        on left: 55
        on right: 56
    $@14 (191)
        on left: 57
        on right: 58
    $@15 (192)
        on left: 59
        on right: 60
    $@16 (193)
        on left: 62
        on right: 63
    $@17 (194)
        on left: 64
        on right: 65
    $@18 (195)
        on left: 66
        on right: 67
    $@19 (196)
        on left: 68
        on right: 69
    ifreg (197)
        on left: 70 71 72
        on right: 34 42
    three_freg (198)
        on left: 75
        on right: 17 52
    $@20 (199)
        on left: 73
        on right: 75
    $@21 (200)
        on left: 74
        on right: 75
    two_freg (201)
        on left: 77
        on right: 18
    $@22 (202)
        on left: 76
        on right: 77
    intreg (203)
        on left: 79 81
        on right: 20 25
    $@23 (204)
        on left: 78
        on right: 79
    $@24 (205)
        on left: 80
        on right: 81
    two_ireg (206)
        on left: 83
        on right: 26 28
    $@25 (207)
        on left: 82
        on right: 83
    disp10 (208)
        on left: 84 85
        on right: 60
    disp12 (209)
        on left: 86 87
        on right: 56 69
    disp14 (210)
        on left: 88
        on right: 40 94
    disp16 (211)
        on left: 89 90
        on right: 34 35 36
    disp21 (212)
        on left: 91
        on right: 42
    disp26 (213)
        on left: 92
        on right: 43
    hint (214)
        on left: 93 94
        on right: 38 63
    mode (215)
        on left: 95 96
        on right: 60
    ipr (216)
        on left: 97
        on right: 54 58 65 67
    scbd6 (217)
        on left: 98 99
        on right: 65 67
    ireg (218)
        on left: 100 101
        on right: 20 22 24 28 30 32 34 35 38 40 45 46 47 48 50 54 56 58 60 61 63 65 67 69 79 81 83
    freg (219)
        on left: 102 103
        on right: 22 24 51 75 77
    assignment (220)
        on left: 104 105
        on right: 9
    expr (221)
        on left: 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
        on right: 81 85 87 88 90 91 92 96 104 107 108 109 110 111 112 113 114 115 116 117 118 119 120 125 234 235 236 237 238 239 265 266
    element (222)
        on left: 121 122 123 124
        on right: 106
    absexpr (223)
        on left: 125
        on right: 72 97 99 101 103 105 145 164 165 184 185 186 187 221 222 223 224 225 226 227 257 264 268
    directive (224)
        on left: 126 127 128 130 131 133 135 137 138 139 142 143 144 145 146 147 149 151 153 154 155 156 157 158 159 160 161 162 163 164 165 167 169 170 172 173 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 192
        on right: 10
    $@26 (225)
        on left: 129
        on right: 130
    $@27 (226)
        on left: 132
        on right: 133
    $@28 (227)
        on left: 134
        on right: 135
    $@29 (228)
        on left: 136
        on right: 137
    $@30 (229)
        on left: 140
        on right: 142
    $@31 (230)
        on left: 141
        on right: 142
    $@32 (231)
        on left: 148
        on right: 149
    $@33 (232)
        on left: 150
        on right: 151
    $@34 (233)
        on left: 152
        on right: 153
    $@35 (234)
        on left: 166
        on right: 167
    $@36 (235)
        on left: 168
        on right: 169
    $@37 (236)
        on left: 171
        on right: 172
    $@38 (237)
        on left: 174
        on right: 175
    $@39 (238)
        on left: 191
        on right: 192
    arch_flag (239)
        on left: 193 194 195
        on right: 131
    pragma_flags (240)
        on left: 196 197
        on right: 130 197
    pragma_flag (241)
        on left: 198 199 200 201 202 203 204
        on right: 196 197
    link_flags (242)
        on left: 205 206
        on right: 192 206
    link_flag (243)
        on left: 207 208
        on right: 205 206
    list_flags (244)
        on left: 209 210
        on right: 172 175 210
    list_flag (245)
        on left: 211 212 213 214 215 216 217
        on right: 209 210
    string_seq (246)
        on left: 218 219
        on right: 133 135 219
    string_ele (247)
        on left: 220 221
        on right: 218 219
    if_condition (248)
        on left: 222 223 224 225 226 227 228 229 230 231 232 233
        on right: 137 138
    while_condition (249)
        on left: 234 235 236 237 238 239 240 241 242 243 244 245
        on right: 142
    opt_comma (250)
        on left: 246 247
        on right: 167
    opt_arg_value (251)
        on left: 248 249
        on right: 230 231 232 233 242 243 244 245 291
    mainbody (252)
        on left: 250
        on right: 137
    ifsubbody_seq (253)
        on left: 251 252 253
        on right: 137 253
    ifsubbody (254)
        on left: 254 255 256
        on right: 252 253
    alignbound (255)
        on left: 257 258 259 260 261 262
        on right: 147 270
    opt_alignfill (256)
        on left: 263 264
        on right: 147
    mem_exprseq (257)
        on left: 265 266
        on right: 149 151 153 266
    opt_absexpr (258)
        on left: 267 268
        on right: 139 154 155 156
    psect_args (259)
        on left: 269 270
        on right: 157 181
    opt_macro_arglist (260)
        on left: 271 272
        on right: 167
    macro_arglist (261)
        on left: 273 274
        on right: 272 274
    macro_arg (262)
        on left: 275 276 277 278 279
        on right: 273 274
    arg_default (263)
        on left: 280 281 282
        on right: 275 276 277 278
    opt_macro_call_arglist (264)
        on left: 283 284
        on right: 169 284
    arg_value (265)
        on left: 285 286
        on right: 249 289
    macro_call_arg (266)
        on left: 287 288 289 290 291
        on right: 283 284


State 0

    0 $accept: • toplevel $end

    error          shift, and go to state 1
    ENDP           shift, and go to state 2
    INS_FOP        shift, and go to state 3
    INS_FP2        shift, and go to state 4
    INS_IOP        shift, and go to state 5
    INS_MEM        shift, and go to state 6
    INS_JSR        shift, and go to state 7
    INS_BRN        shift, and go to state 8
    INS_M1A        shift, and go to state 9
    INS_M1B        shift, and go to state 10
    INS_MIS        shift, and go to state 11
    INS_FPCR       shift, and go to state 12
    INS_RPCC       shift, and go to state 13
    INS_SEXT       shift, and go to state 14
    INS_IP2        shift, and go to state 15
    INS_IP3        shift, and go to state 16
    INS_FTI        shift, and go to state 17
    INS_LSB        shift, and go to state 18
    INS_SSB        shift, and go to state 19
    INS_ITF        shift, and go to state 20
    INS_UNOP       shift, and go to state 21
    INS_CALLPAL    shift, and go to state 22
    INS_IPR4       shift, and go to state 23
    INS_HWM4       shift, and go to state 24
    INS_IPR5       shift, and go to state 25
    INS_HWM5       shift, and go to state 26
    INS_REI6       shift, and go to state 27
    INS_MTI6       shift, and go to state 28
    INS_MFI6       shift, and go to state 29
    INS_HWM6       shift, and go to state 30
    INS_1REG       shift, and go to state 31
    ADDR           shift, and go to state 32
    QUAD           shift, and go to state 33
    LONG           shift, and go to state 34
    BLKL           shift, and go to state 35
    BLKQ           shift, and go to state 36
    IDENT          shift, and go to state 37
    TITLE          shift, and go to state 38
    LOCAL_LABEL    shift, and go to state 39
    NOLIST         shift, and go to state 40
    LIST           shift, and go to state 41
    CMDIN          shift, and go to state 42
    NODEBUG        shift, and go to state 43
    K_DEBUG        shift, and go to state 44
    IF             shift, and go to state 45
    WHILE          shift, and go to state 46
    BREAK          shift, and go to state 47
    CONTINUE       shift, and go to state 48
    INCLUDE        shift, and go to state 49
    INCLUDE_DIR    shift, and go to state 50
    MINCLUDE       shift, and go to state 51
    SYMBOL         shift, and go to state 52
    EOL            shift, and go to state 53
    DOT            shift, and go to state 54
    ALIGN          shift, and go to state 55
    REPEAT         shift, and go to state 56
    DOCMD          shift, and go to state 57
    MACRO          shift, and go to state 58
    PRAGMA         shift, and go to state 59
    MACRO_CALL     shift, and go to state 60
    NEXT_ARG       shift, and go to state 61
    ASCII          shift, and go to state 62
    ASCIZ          shift, and go to state 63
    SAVE_PSECT     shift, and go to state 64
    SAVE_DSECT     shift, and go to state 65
    RESTORE_PSECT  shift, and go to state 66
    RESTORE_DSECT  shift, and go to state 67
    PSECT          shift, and go to state 68
    DSECT          shift, and go to state 69
    LINK_ADDRESS   shift, and go to state 70
    LINK_AFTER     shift, and go to state 71
    LINK_FIRST     shift, and go to state 72
    LINK_LAST      shift, and go to state 73
    LINK_ATTR      shift, and go to state 74
    LINK_OFFSET    shift, and go to state 75
    LINK_REGION    shift, and go to state 76
    LINK_SIZE      shift, and go to state 77
    HEADER         shift, and go to state 78
    ENDH           shift, and go to state 79
    WARN           shift, and go to state 80
    ERROR          shift, and go to state 81
    PRINT          shift, and go to state 82
    IIF            shift, and go to state 83
    ARCH           shift, and go to state 84

    $end           reduce using rule 2 (sequence)
    error          [reduce using rule 2 (sequence)]
    ENDP           [reduce using rule 2 (sequence)]
    INS_FOP        [reduce using rule 2 (sequence)]
    INS_FP2        [reduce using rule 2 (sequence)]
    INS_IOP        [reduce using rule 2 (sequence)]
    INS_MEM        [reduce using rule 2 (sequence)]
    INS_JSR        [reduce using rule 2 (sequence)]
    INS_BRN        [reduce using rule 2 (sequence)]
    INS_M1A        [reduce using rule 2 (sequence)]
    INS_M1B        [reduce using rule 2 (sequence)]
    INS_MIS        [reduce using rule 2 (sequence)]
    INS_FPCR       [reduce using rule 2 (sequence)]
    INS_RPCC       [reduce using rule 2 (sequence)]
    INS_SEXT       [reduce using rule 2 (sequence)]
    INS_IP2        [reduce using rule 2 (sequence)]
    INS_IP3        [reduce using rule 2 (sequence)]
    INS_FTI        [reduce using rule 2 (sequence)]
    INS_LSB        [reduce using rule 2 (sequence)]
    INS_SSB        [reduce using rule 2 (sequence)]
    INS_ITF        [reduce using rule 2 (sequence)]
    INS_UNOP       [reduce using rule 2 (sequence)]
    INS_CALLPAL    [reduce using rule 2 (sequence)]
    INS_IPR4       [reduce using rule 2 (sequence)]
    INS_HWM4       [reduce using rule 2 (sequence)]
    INS_IPR5       [reduce using rule 2 (sequence)]
    INS_HWM5       [reduce using rule 2 (sequence)]
    INS_REI6       [reduce using rule 2 (sequence)]
    INS_MTI6       [reduce using rule 2 (sequence)]
    INS_MFI6       [reduce using rule 2 (sequence)]
    INS_HWM6       [reduce using rule 2 (sequence)]
    INS_1REG       [reduce using rule 2 (sequence)]
    ADDR           [reduce using rule 2 (sequence)]
    QUAD           [reduce using rule 2 (sequence)]
    LONG           [reduce using rule 2 (sequence)]
    BLKL           [reduce using rule 2 (sequence)]
    BLKQ           [reduce using rule 2 (sequence)]
    IDENT          [reduce using rule 2 (sequence)]
    TITLE          [reduce using rule 2 (sequence)]
    LOCAL_LABEL    [reduce using rule 2 (sequence)]
    NOLIST         [reduce using rule 2 (sequence)]
    LIST           [reduce using rule 2 (sequence)]
    CMDIN          [reduce using rule 2 (sequence)]
    NODEBUG        [reduce using rule 2 (sequence)]
    K_DEBUG        [reduce using rule 2 (sequence)]
    IF             [reduce using rule 2 (sequence)]
    WHILE          [reduce using rule 2 (sequence)]
    BREAK          [reduce using rule 2 (sequence)]
    CONTINUE       [reduce using rule 2 (sequence)]
    INCLUDE        [reduce using rule 2 (sequence)]
    INCLUDE_DIR    [reduce using rule 2 (sequence)]
    MINCLUDE       [reduce using rule 2 (sequence)]
    SYMBOL         [reduce using rule 2 (sequence)]
    EOL            [reduce using rule 2 (sequence)]
    DOT            [reduce using rule 2 (sequence)]
    ALIGN          [reduce using rule 2 (sequence)]
    REPEAT         [reduce using rule 2 (sequence)]
    DOCMD          [reduce using rule 2 (sequence)]
    MACRO          [reduce using rule 2 (sequence)]
    PRAGMA         [reduce using rule 2 (sequence)]
    MACRO_CALL     [reduce using rule 2 (sequence)]
    NEXT_ARG       [reduce using rule 2 (sequence)]
    ASCII          [reduce using rule 2 (sequence)]
    ASCIZ          [reduce using rule 2 (sequence)]
    SAVE_PSECT     [reduce using rule 2 (sequence)]
    SAVE_DSECT     [reduce using rule 2 (sequence)]
    RESTORE_PSECT  [reduce using rule 2 (sequence)]
    RESTORE_DSECT  [reduce using rule 2 (sequence)]
    PSECT          [reduce using rule 2 (sequence)]
    DSECT          [reduce using rule 2 (sequence)]
    LINK_ADDRESS   [reduce using rule 2 (sequence)]
    LINK_AFTER     [reduce using rule 2 (sequence)]
    LINK_FIRST     [reduce using rule 2 (sequence)]
    LINK_LAST      [reduce using rule 2 (sequence)]
    LINK_ATTR      [reduce using rule 2 (sequence)]
    LINK_OFFSET    [reduce using rule 2 (sequence)]
    LINK_REGION    [reduce using rule 2 (sequence)]
    LINK_SIZE      [reduce using rule 2 (sequence)]
    HEADER         [reduce using rule 2 (sequence)]
    ENDH           [reduce using rule 2 (sequence)]
    WARN           [reduce using rule 2 (sequence)]
    ERROR          [reduce using rule 2 (sequence)]
    PRINT          [reduce using rule 2 (sequence)]
    IIF            [reduce using rule 2 (sequence)]
    ARCH           [reduce using rule 2 (sequence)]

    toplevel     go to state 85
    sequence     go to state 86
    action       go to state 87
    label        go to state 88
    instruction  go to state 89
    assignment   go to state 90
    directive    go to state 91


State 1

   12 action: error • EOL

    EOL  shift, and go to state 92


State 2

   11 action: ENDP • EOL

    EOL  shift, and go to state 93


State 3

   17 instruction: INS_FOP • three_freg

    FREG         shift, and go to state 94
    LOCAL_LABEL  shift, and go to state 95
    NUMBER       shift, and go to state 96
    NOT          shift, and go to state 97
    LOG_NOT      shift, and go to state 98
    SYMBOL       shift, and go to state 99
    DOT          shift, and go to state 100
    '-'          shift, and go to state 101
    '<'          shift, and go to state 102

    three_freg  go to state 103
    freg        go to state 104
    expr        go to state 105
    element     go to state 106
    absexpr     go to state 107


State 4

   18 instruction: INS_FP2 • two_freg

    FREG         shift, and go to state 94
    LOCAL_LABEL  shift, and go to state 95
    NUMBER       shift, and go to state 96
    NOT          shift, and go to state 97
    LOG_NOT      shift, and go to state 98
    SYMBOL       shift, and go to state 99
    DOT          shift, and go to state 100
    '-'          shift, and go to state 101
    '<'          shift, and go to state 102

    two_freg  go to state 108
    freg      go to state 109
    expr      go to state 105
    element   go to state 106
    absexpr   go to state 107


State 5

   20 instruction: INS_IOP • ireg ',' $@1 intreg

    IREG         shift, and go to state 110
    LOCAL_LABEL  shift, and go to state 95
    NUMBER       shift, and go to state 96
    NOT          shift, and go to state 97
    LOG_NOT      shift, and go to state 98
    SYMBOL       shift, and go to state 99
    DOT          shift, and go to state 100
    '-'          shift, and go to state 101
    '<'          shift, and go to state 102

    ireg     go to state 111
    expr     go to state 105
    element  go to state 106
    absexpr  go to state 112


State 6

   34 instruction: INS_MEM • ifreg ',' $@7 disp16 '(' ireg ')'
